[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Title.gd" type="Script" id=1]
[ext_resource path="res://fonts/ariblk.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 168
outline_size = 7
outline_color = Color( 0.415686, 0.415686, 0.466667, 1 )
extra_spacing_char = 19
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_char = 3
font_data = ExtResource( 2 )

[node name="UI" type="Node2D"]
position = Vector2( 400, 300 )
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.0
margin_top = -308.0
margin_right = 299.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 1 )
text = "PONG"
align = 1
valign = 1

[node name="1player" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -25.0
margin_right = 87.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.952941, 0.952941, 0.952941, 1 )
text = "1 player"

[node name="2player" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = 50.0
margin_right = 86.5
margin_bottom = 102.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.952941, 0.952941, 0.952941, 1 )
text = "2 player"

[node name="exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = 124.0
margin_right = 86.5
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.952941, 0.952941, 0.952941, 1 )
text = "exit"

[node name="demo" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = 124.0
margin_right = 86.5
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.952941, 0.952941, 0.952941, 1 )
text = "demo"
[connection signal="pressed" from="1player" to="." method="_on_1player_pressed"]
[connection signal="pressed" from="2player" to="." method="_on_2player_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="demo" to="." method="_on_demo_pressed"]
[connection signal="pressed" from="demo" to="." method="_on_exit_pressed"]
